...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="372dp"
            android:layout_height="43dp"
            android:layout_marginTop="212dp"
            android:text="@string/caroline"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
...
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/avatar_image"
            app:srcCompat="?attr/homeAsUpIndicator" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="196dp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="@+id/name_text"
            app:layout_constraintHorizontal_bias="0.929"
...
